add onlyoffice docspace node
Co-authored-by: sshakndr <aleksandr.kondratyev@onlyoffice.com>

--- a/packages/nodes-base/package.json
+++ b/packages/nodes-base/package.json
@@ -271,6 +271,10 @@
       "dist/credentials/OktaApi.credentials.js",
       "dist/credentials/OneSimpleApi.credentials.js",
       "dist/credentials/OnfleetApi.credentials.js",
+      "dist/credentials/OnlyofficeDocspaceApiKeyApi.credentials.js",
+      "dist/credentials/OnlyofficeDocspaceBasicAuthApi.credentials.js",
+      "dist/credentials/OnlyofficeDocspaceOAuth2Api.credentials.js",
+      "dist/credentials/OnlyofficeDocspacePersonalAccessTokenApi.credentials.js",
       "dist/credentials/OpenAiApi.credentials.js",
       "dist/credentials/OpenCTIApi.credentials.js",
       "dist/credentials/OpenWeatherMapApi.credentials.js",
@@ -690,6 +694,8 @@
       "dist/nodes/NoOp/NoOp.node.js",
       "dist/nodes/Onfleet/Onfleet.node.js",
       "dist/nodes/Onfleet/OnfleetTrigger.node.js",
+      "dist/nodes/OnlyofficeDocspace/OnlyofficeDocspace.node.js",
+      "dist/nodes/OnlyofficeDocspace/OnlyofficeDocspaceTrigger.node.js",
       "dist/nodes/Netscaler/ADC/NetscalerAdc.node.js",
       "dist/nodes/Notion/Notion.node.js",
       "dist/nodes/Notion/NotionTrigger.node.js",
