restore legacy node, create V2 for new node

--- a/packages/nodes-base/package.json
+++ b/packages/nodes-base/package.json
@@ -242,6 +242,8 @@
       "dist/credentials/MicrosoftSql.credentials.js",
       "dist/credentials/MicrosoftTeamsOAuth2Api.credentials.js",
       "dist/credentials/MicrosoftToDoOAuth2Api.credentials.js",
+      "dist/credentials/MindeeInvoiceApi.credentials.js",
+      "dist/credentials/MindeeReceiptApi.credentials.js",
       "dist/credentials/MindeeV2Api.credentials.js",
       "dist/credentials/MiroOAuth2Api.credentials.js",
       "dist/credentials/MispApi.credentials.js",
@@ -665,6 +667,7 @@
       "dist/nodes/Microsoft/Teams/MicrosoftTeamsTrigger.node.js",
       "dist/nodes/Microsoft/ToDo/MicrosoftToDo.node.js",
       "dist/nodes/Mindee/Mindee.node.js",
+      "dist/nodes/MindeeV2/MindeeV2.node.js",
       "dist/nodes/Misp/Misp.node.js",
       "dist/nodes/MistralAI/MistralAi.node.js",
       "dist/nodes/Mocean/Mocean.node.js",
