--- a/packages/@n8n/nodes-langchain/package.json
+++ b/packages/@n8n/nodes-langchain/package.json
@@ -93,6 +93,7 @@
       "dist/nodes/llms/LmChatVercelAiGateway/LmChatVercelAiGateway.node.js",
       "dist/nodes/llms/LmChatXAiGrok/LmChatXAiGrok.node.js",
       "dist/nodes/llms/LmFakeTesting/LmFakeTesting.node.js",
+      "dist/nodes/llms/LmFakeSimple/LmFakeSimple.node.js",
       "dist/nodes/llms/LMChatOpenAi/LmChatOpenAi.node.js",
       "dist/nodes/llms/LMOpenAi/LmOpenAi.node.js",
       "dist/nodes/llms/LMCohere/LmCohere.node.js",
