--- a/packages/frontend/editor-ui/package.json
+++ b/packages/frontend/editor-ui/package.json
@@ -8,6 +8,8 @@
     "clean": "rimraf dist .turbo .build",
     "popularity-cache-marker": "node scripts/cache-marker.mjs",
     "fetch-popularity": "node scripts/fetch-node-popularity.mjs",
+    "generate-plugin-registry": "node scripts/generate-plugin-registry.mjs",
+    "prebuild": "pnpm generate-plugin-registry",
     "build": "cross-env VUE_APP_PUBLIC_PATH=\"/{{BASE_PATH}}/\" NODE_OPTIONS=\"--max-old-space-size=8192\" vite build",
     "typecheck": "vue-tsc --noEmit",
     "typecheck:watch": "vue-tsc --watch --noEmit",
@@ -48,6 +50,7 @@
     "@n8n/rest-api-client": "workspace:*",
     "@n8n/stores": "workspace:*",
     "@n8n/utils": "workspace:*",
+    "@n8n/extension-sdk": "workspace:*",
     "@replit/codemirror-indentation-markers": "^6.5.3",
     "@sentry/vue": "catalog:frontend",
     "@sqlite.org/sqlite-wasm": "3.50.4-build1",
