--- a/packages/extensions/insights/package.json
+++ b/packages/extensions/insights/package.json
@@ -32,8 +32,8 @@
     "dev": "vite",
     "lint": "eslint src --quiet",
     "lint:fix": "eslint src --fix",
-    "lint:styles": "stylelint \"src/**/*.{scss,sass,vue}\" --cache",
-    "lint:styles:fix": "stylelint \"src/**/*.{scss,sass,vue}\" --fix --cache",
+    "lint:styles": "stylelint \"src/**/*.{scss,sass,vue}\" --cache --custom-formatter ../../../@n8n/stylelint-config/src/formatter-summary.js",
+    "lint:styles:fix": "stylelint \"src/**/*.{scss,sass,vue}\" --fix --cache --custom-formatter ../../../@n8n/stylelint-config/src/formatter-summary.js",
     "typecheck": "vue-tsc --noEmit",
     "build:backend": "tsup",
     "build:frontend": "vite build",
