--- a/packages/frontend/@n8n/design-system/package.json
+++ b/packages/frontend/@n8n/design-system/package.json
@@ -19,8 +19,8 @@
     "format:check": "biome ci .  && prettier --check . --ignore-path ../../../../.prettierignore",
     "lint": "eslint src --quiet",
     "lint:fix": "eslint src --fix",
-    "lint:styles": "stylelint \"src/**/*.{scss,sass,vue}\" --cache",
-    "lint:styles:fix": "stylelint \"src/**/*.{scss,sass,vue}\" --fix --cache"
+    "lint:styles": "stylelint \"src/**/*.{scss,sass,vue}\" --cache --custom-formatter ../../../../@n8n/stylelint-config/src/formatter-summary.js",
+    "lint:styles:fix": "stylelint \"src/**/*.{scss,sass,vue}\" --fix --cache --custom-formatter ../../../../@n8n/stylelint-config/src/formatter-summary.js"
   },
   "devDependencies": {
     "@n8n/eslint-config": "workspace:*",
