--- a/packages/@n8n/stylelint-config/package.json
+++ b/packages/@n8n/stylelint-config/package.json
@@ -11,6 +11,9 @@
     "./rules": {
       "default": "./dist/rules/index.js",
       "types": "./dist/rules/index.d.ts"
+    },
+    "./formatter-summary": {
+      "default": "./dist/formatter-summary.js"
     }
   },
   "scripts": {
