Add project and projectId fields to get and update a variable project in the public API

--- a/packages/cli/src/public-api/v1/handlers/variables/spec/schemas/variable.create.yml
+++ b/packages/cli/src/public-api/v1/handlers/variables/spec/schemas/variable.create.yml
@@ -15,14 +15,7 @@ properties:
   type:
     type: string
     readOnly: true
-  project:
-    type: object
-    properties:
-      id:
-        type: string
-        readOnly: true
-      name:
-        type: string
-      type:
-        type: string
-        readOnly: true
+  projectId:
+    type: string
+    example: VmwOO9HeTEj20kxM
+    nullable: true
