feat(API): Add project and projectId fields to get and update a variable project (#20544)

--- a/packages/cli/src/public-api/v1/handlers/variables/spec/schemas/variable.create.yml
+++ b/packages/cli/src/public-api/v1/handlers/variables/spec/schemas/variable.create.yml
@@ -15,5 +15,7 @@ properties:
   type:
     type: string
     readOnly: true
-  project:
-    $ref: '../../../projects/spec/schemas/project.yml'
+  projectId:
+    type: string
+    example: VmwOO9HeTEj20kxM
+    nullable: true
