--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,7 @@
 				// "N8N_PORT": "5679",
 			},
 			"outputCapture": "std",
-			"killBehavior": "polite"
+			"killBehavior": "forceful"
 		},
 		{
 			"name": "Launch n8n CLI dev with debug",
