Restrict nightly benchmark workflow to main repo only
Prevent scheduled benchmark runs from triggering on forks by adding a repository check (if: github.repository == 'n8n-io/n8n') to the workflow. This ensures only the main repo runs nightly benchmarks and notifications.

--- a/.github/workflows/benchmark-nightly.yml
+++ b/.github/workflows/benchmark-nightly.yml
@@ -37,6 +37,7 @@ concurrency:
 
 jobs:
   build:
+    if: github.repository == 'n8n-io/n8n'
     runs-on: ubuntu-latest
     environment: benchmarking
 
@@ -112,7 +113,7 @@ jobs:
     name: Notify Cats on failure
     runs-on: ubuntu-latest
     needs: [build]
-    if: failure()
+    if: failure() && github.repository == 'n8n-io/n8n'
     steps:
       - uses: act10ns/slack@44541246747a30eb3102d87f7a4cc5471b0ffb7d # v2.1.0
         with:
