--- a/packages/@n8n/nodes-langchain/package.json
+++ b/packages/@n8n/nodes-langchain/package.json
@@ -137,6 +137,7 @@
       "dist/nodes/vector_store/VectorStorePinecone/VectorStorePinecone.node.js",
       "dist/nodes/vector_store/VectorStorePineconeInsert/VectorStorePineconeInsert.node.js",
       "dist/nodes/vector_store/VectorStorePineconeLoad/VectorStorePineconeLoad.node.js",
+      "dist/nodes/vector_store/VectorStoreRedis/VectorStoreRedis.node.js",
       "dist/nodes/vector_store/VectorStoreQdrant/VectorStoreQdrant.node.js",
       "dist/nodes/vector_store/VectorStoreSupabase/VectorStoreSupabase.node.js",
       "dist/nodes/vector_store/VectorStoreSupabaseInsert/VectorStoreSupabaseInsert.node.js",
@@ -227,7 +228,7 @@
     "pdf-parse": "1.1.1",
     "pg": "8.12.0",
     "proxy-from-env": "^1.1.0",
-    "redis": "4.6.12",
+    "redis": "4.6.14",
     "sanitize-html": "2.12.1",
     "sqlite3": "5.1.7",
     "temp": "0.9.4",
