feat: Migrate build system to `rolldown` in Front End packages (no-changelog) (#20717)

--- a/packages/@n8n/nodes-langchain/package.json
+++ b/packages/@n8n/nodes-langchain/package.json
@@ -164,7 +164,7 @@
     "fast-glob": "catalog:",
     "jest-mock-extended": "^3.0.4",
     "n8n-core": "workspace:*",
-    "tsup": "catalog:"
+    "tsup": "^8.5.0"
   },
   "dependencies": {
     "@aws-sdk/client-sso-oidc": "3.808.0",
