--- a/packages/@n8n/vitest-config/package.json
+++ b/packages/@n8n/vitest-config/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@n8n/typescript-config": "workspace:*",
+    "unplugin-swc": "catalog:",
     "vite": "catalog:",
     "vitest": "catalog:"
   },
@@ -30,6 +31,11 @@
       "import": "./dist/node.js",
       "require": "./dist/node.js",
       "types": "./dist/node.d.ts"
+    },
+    "./node-decorators": {
+      "import": "./dist/node-decorators.js",
+      "require": "./dist/node-decorators.js",
+      "types": "./dist/node-decorators.d.ts"
     }
   },
   "scripts": {
