--- a/packages/@n8n/decorators/tsconfig.json
+++ b/packages/@n8n/decorators/tsconfig.json
@@ -2,13 +2,13 @@
 	"extends": "@n8n/typescript-config/tsconfig.common.json",
 	"compilerOptions": {
 		"rootDir": ".",
-		"types": ["node", "jest"],
+		"types": ["node", "vitest/globals"],
 		"baseUrl": "src",
 		"tsBuildInfoFile": "dist/typecheck.tsbuildinfo",
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true
 	},
-	"include": ["src/**/*.ts"],
+	"include": ["src/**/*.ts", "vitest.config.ts"],
 	"references": [
 		{ "path": "../../workflow/tsconfig.build.esm.json" },
 		{ "path": "../constants/tsconfig.build.json" },
