--- a/.github/workflows/units-tests-reusable.yml
+++ b/.github/workflows/units-tests-reusable.yml
@@ -93,3 +93,13 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: frontend
           name: frontend-shard-${{ matrix.shard }}
+
+  post-e2e-tests:
+    name: E2E - Checks
+    runs-on: ubuntu-latest
+    needs: [unit-test-backend, unit-test-frontend]
+    if: always()
+    steps:
+      - name: Fail if tests failed
+        if: needs.unit-test-backend.result == 'failure' || needs.unit-test-frontend.result == 'failure'
+        run: exit 1
