feat: Add dedicated MCP OAuth credentials

--- a/packages/@n8n/nodes-langchain/package.json
+++ b/packages/@n8n/nodes-langchain/package.json
@@ -32,6 +32,7 @@
       "dist/credentials/GooglePalmApi.credentials.js",
       "dist/credentials/GroqApi.credentials.js",
       "dist/credentials/HuggingFaceApi.credentials.js",
+      "dist/credentials/McpOAuth2Api.credentials.js",
       "dist/credentials/MotorheadApi.credentials.js",
       "dist/credentials/MilvusApi.credentials.js",
       "dist/credentials/MistralCloudApi.credentials.js",
