feat(API): Add optional projectId parameter to credential creation

--- a/packages/cli/src/public-api/v1/handlers/credentials/spec/paths/credentials.yml
+++ b/packages/cli/src/public-api/v1/handlers/credentials/spec/paths/credentials.yml
@@ -21,5 +21,9 @@ post:
             $ref: '../schemas/create-credential-response.yml'
     '401':
       $ref: '../../../../shared/spec/responses/unauthorized.yml'
+    '403':
+      $ref: '../../../../shared/spec/responses/forbidden.yml'
+    '404':
+      $ref: '../../../../shared/spec/responses/notFound.yml'
     '415':
       description: Unsupported media type.
