--- a/packages/cli/src/public-api/v1/handlers/credentials/spec/schemas/credential.yml
+++ b/packages/cli/src/public-api/v1/handlers/credentials/spec/schemas/credential.yml
@@ -18,6 +18,10 @@ properties:
     type: object
     writeOnly: true
     example: { token: 'ada612vad6fa5df4adf5a5dsf4389adsf76da7s' }
+  projectId:
+    type: string
+    example: UGNLeiSv2D99tUNJ
+    nullable: true
   createdAt:
     type: string
     format: date-time
