--- a/packages/cli/src/public-api/v1/handlers/credentials/spec/schemas/create-credential-response.yml
+++ b/packages/cli/src/public-api/v1/handlers/credentials/spec/schemas/create-credential-response.yml
@@ -16,6 +16,9 @@ properties:
   type:
     type: string
     example: github
+  projectId:
+    type: string
+    example: UGNLeiSv2D99tUNJ
   createdAt:
     type: string
     format: date-time
