--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -110,8 +110,8 @@
     "@n8n/typeorm": "catalog:",
     "@n8n_io/ai-assistant-sdk": "catalog:",
     "@n8n_io/license-sdk": "2.23.0",
-    "@rudderstack/rudder-sdk-node": "2.1.4",
     "@parcel/watcher": "^2.5.1",
+    "@rudderstack/rudder-sdk-node": "2.1.4",
     "@sentry/node": "catalog:",
     "aws4": "1.11.0",
     "axios": "catalog:",
@@ -133,6 +133,7 @@
     "express-rate-limit": "7.5.0",
     "fast-glob": "catalog:",
     "flat": "5.0.2",
+    "flatbuffers": "^25.9.23",
     "flatted": "catalog:",
     "formidable": "3.5.4",
     "handlebars": "4.7.8",
@@ -162,6 +163,7 @@
     "p-lazy": "3.1.0",
     "pg": "8.12.0",
     "picocolors": "catalog:",
+    "piscina": "^5.1.3",
     "pkce-challenge": "5.0.0",
     "posthog-node": "3.2.1",
     "prom-client": "15.1.3",
