--- a/packages/@n8n/ai-workflow-builder.ee/package.json
+++ b/packages/@n8n/ai-workflow-builder.ee/package.json
@@ -46,6 +46,7 @@
     "@n8n/backend-common": "workspace:^",
     "@n8n/config": "workspace:*",
     "@n8n/di": "workspace:*",
+    "@n8n/utils": "workspace:*",
     "@n8n_io/ai-assistant-sdk": "catalog:",
     "langsmith": "^0.3.45",
     "lodash": "catalog:",
