--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -110,8 +110,8 @@
     "@n8n/typeorm": "catalog:",
     "@n8n_io/ai-assistant-sdk": "catalog:",
     "@n8n_io/license-sdk": "2.23.0",
-    "@rudderstack/rudder-sdk-node": "2.1.4",
     "@parcel/watcher": "^2.5.1",
+    "@rudderstack/rudder-sdk-node": "2.1.4",
     "@sentry/node": "catalog:",
     "aws4": "1.11.0",
     "axios": "catalog:",
@@ -151,6 +151,7 @@
     "n8n-core": "workspace:*",
     "n8n-editor-ui": "workspace:*",
     "n8n-nodes-base": "workspace:*",
+    "n8n-nodes-perplexity": "^0.2.0",
     "n8n-workflow": "workspace:*",
     "nanoid": "catalog:",
     "nodemailer": "6.9.9",
