add missing workflow settings specs in public API Handle keep existing workflow settings on update if not set

--- a/packages/cli/src/public-api/v1/handlers/workflows/spec/schemas/workflowSettings.yml
+++ b/packages/cli/src/public-api/v1/handlers/workflows/spec/schemas/workflowSettings.yml
@@ -25,3 +25,13 @@ properties:
   executionOrder:
     type: string
     example: v1
+  callerPolicy:
+    type: string
+    enum: ['any', 'none', 'workflowsFromAList', 'workflowsFromSameOwner']
+  callerIds:
+    type: string
+  timeSavedPerExecution:
+    type: number
+    description: Estimated time saved per execution in minutes
+  availableInMCP:
+    type: boolean
