WIP: Use toon encoding for parameter-updater chain
Signed-off-by: Oleg Ivaniv <me@olegivaniv.com>

--- a/packages/@n8n/ai-workflow-builder.ee/package.json
+++ b/packages/@n8n/ai-workflow-builder.ee/package.json
@@ -39,6 +39,7 @@
     }
   },
   "dependencies": {
+    "@byjohann/toon": "^0.3.1",
     "@langchain/anthropic": "catalog:",
     "@langchain/core": "catalog:",
     "@langchain/langgraph": "0.2.74",
