feat: Add Azure AD authentication support with configuration and callback handling
- Introduced Azure AD configuration class to manage settings.
- Implemented Azure AD service for handling authentication flow and user management.
- Created Azure AD controller to manage login initiation and callback processing.
- Added state management for secure authentication flow.
- Included validation for Azure AD configuration and redirect URLs.
- Enhanced logging for better debugging and error tracking.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "setup-backend-module": "node scripts/ensure-zx.mjs && zx scripts/backend-module/setup.mjs",
     "start": "run-script-os",
     "start:default": "cd packages/cli/bin && ./n8n",
+    "start:azure": "export $(cat .env | xargs) && cd packages/cli/bin && ./n8n",
     "start:tunnel": "./packages/cli/bin/n8n start --tunnel",
     "start:windows": "cd packages/cli/bin && n8n",
     "test": "JEST_JUNIT_CLASSNAME={filepath} turbo run test",
@@ -89,6 +90,8 @@
     ],
     "overrides": {
       "@azure/identity": "^4.3.0",
+      "@lezer/common": "^1.2.1",
+      "@lezer/lr": "^1.4.2",
       "@mistralai/mistralai": "^1.10.0",
       "@n8n/typeorm>@sentry/node": "catalog:",
       "@types/node": "^20.17.50",
