--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -91,6 +91,7 @@
     "@aws-sdk/client-secrets-manager": "3.808.0",
     "@azure/identity": "4.3.0",
     "@azure/keyvault-secrets": "4.8.0",
+    "@azure/msal-node": "^2.15.0",
     "@google-cloud/secret-manager": "5.6.0",
     "@n8n/ai-workflow-builder": "workspace:*",
     "@n8n/api-types": "workspace:*",
