--- a/.github/workflows/playwright-test-reusable.yml
+++ b/.github/workflows/playwright-test-reusable.yml
@@ -42,6 +42,8 @@ on:
         required: true
       QA_PERFORMANCE_METRICS_WEBHOOK_PASSWORD:
         required: true
+      ANTHROPIC_API_KEY:
+        required: false
 
 env:
   PLAYWRIGHT_BROWSERS_PATH: packages/testing/playwright/ms-playwright-cache
@@ -93,3 +95,4 @@ jobs:
           QA_PERFORMANCE_METRICS_WEBHOOK_URL: ${{ secrets.QA_PERFORMANCE_METRICS_WEBHOOK_URL }}
           QA_PERFORMANCE_METRICS_WEBHOOK_USER: ${{ secrets.QA_PERFORMANCE_METRICS_WEBHOOK_USER }}
           QA_PERFORMANCE_METRICS_WEBHOOK_PASSWORD: ${{ secrets.QA_PERFORMANCE_METRICS_WEBHOOK_PASSWORD }}
+          N8N_AI_ANTHROPIC_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
